syntax = "proto3";

option csharp_namespace = "SoundPlayer";

package soundplayer;

service AuthProto {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Hello (HelloRequest) returns (HelloResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  bool success = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string name = 1;
}